tests/analyzer/errors/match_string.ray
fn main() {
    match "any" {
        "one" => {}
        "two" => {}
        "one" => {}
        else => {}
    }

    match "any" {
        "one" => {}
    }
}
